forget calendar... html rules

--- a/turns/templates/turns/post_turns.html
+++ b/turns/templates/turns/post_turns.html
@@ -6,7 +6,7 @@
      
     <table>
         <table>
-            <tr>
+            <tr scope="row">
                 <th scope="col">Lunes</th>
                 <th scope="col">Martes</th>
                 <th scope="col">Miercoles</th>
@@ -16,67 +16,67 @@
                 <th scope="col">Domingo</th>
             </tr>
             <tr>
-                <button type="button">08:30 - 13:00</button>
-                <button type="button">08:30 - 13:00</button>
-                <button type="button">08:30 - 13:00</button>
-                <button type="button">08:30 - 13:00</button>
-                <button type="button">08:30 - 13:00</button>
-                <button type="button">08:30 - 13:00</button>
-                <button type="button">08:30 - 13:00</button>
+                <td><button type="button">08:30 - 13:00</button></td>
+                <td><button type="button">08:30 - 13:00</button></td>
+                <td><button type="button">08:30 - 13:00</button></td>
+                <td><button type="button">08:30 - 13:00</button></td>
+                <td><button type="button">08:30 - 13:00</button></td>
+                <td><button type="button">08:30 - 13:00</button></td>
+                <td><button type="button">08:30 - 13:00</button></td>
             </tr>
             <tr>
-                <td>10:00 - 13:00</td>
-                <td>10:00 - 13:00</td>
-                <td>10:00 - 13:00</td>
-                <td>10:00 - 13:00</td>
-                <td>10:00 - 13:00</td>
-                <td>10:00 - 13:00</td>
-                <td>10:00 - 13:00</td>
+                <td><button type="button">10:00 - 13:00</button></td>
+                <td><button type="button">10:00 - 13:00</button></td>
+                <td><button type="button">10:00 - 13:00</button></td>
+                <td><button type="button">10:00 - 13:00</button></td>
+                <td><button type="button">10:00 - 13:00</button></td>
+                <td><button type="button">10:00 - 13:00</button></td>
+                <td><button type="button">10:00 - 13:00</button></td>
             </tr>	
             <tr>
-                <td>12:00 - 16:00</td>
-                <td>12:00 - 16:00</td>
-                <td>12:00 - 16:00</td>
-                <td>12:00 - 16:00</td>
-                <td>12:00 - 16:00</td>
-                <td>12:00 - 16:00</td>
-                <td>12:00 - 16:00</td>
+                <td><button type="button">12:00 - 16:00</button></td>
+                <td><button type="button">12:00 - 16:00</button></td>
+                <td><button type="button">12:00 - 16:00</button></td>
+                <td><button type="button">12:00 - 16:00</button></td>
+                <td><button type="button">12:00 - 16:00</button></td>
+                <td><button type="button">12:00 - 16:00</button></td>
+                <td><button type="button">12:00 - 16:00</button></td>
             </tr>	
             <tr>
-                <td>13:00 - 16:00</td>
-                <td>13:00 - 16:00</td>
-                <td>13:00 - 16:00</td>
-                <td>13:00 - 16:00</td>
-                <td>13:00 - 16:00</td>
-                <td>13:00 - 16:00</td>
-                <td>13:00 - 16:00</td>
+                <td><button type="button">13:00 - 16:00</button></td>
+                <td><button type="button">13:00 - 16:00</button></td>
+                <td><button type="button">13:00 - 16:00</button></td>
+                <td><button type="button">13:00 - 16:00</button></td>
+                <td><button type="button">13:00 - 16:00</button></td>
+                <td><button type="button">13:00 - 16:00</button></td>
+                <td><button type="button">13:00 - 16:00</button></td>
             </tr>	
             <tr>
-                <td>16:00 - 19:00</td>
-                <td>16:00 - 19:00</td>
-                <td>16:00 - 19:00</td>
-                <td>16:00 - 19:00</td>
-                <td>16:00 - 19:00</td>
-                <td>16:00 - 19:00</td>
-                <td>16:00 - 19:00</td>
+                <td><button type="button">16:00 - 19:00</button></td>
+                <td><button type="button">16:00 - 19:00</button></td>
+                <td><button type="button">16:00 - 19:00</button></td>
+                <td><button type="button">16:00 - 19:00</button></td>
+                <td><button type="button">16:00 - 19:00</button></td>
+                <td><button type="button">16:00 - 19:00</button></td>
+                <td><button type="button">16:00 - 19:00</button></td>
             </tr>	
             <tr>
-                <td>18:00 - 22:30</td>
-                <td>18:00 - 22:30</td>
-                <td>18:00 - 22:30</td>
-                <td>18:00 - 22:30</td>
-                <td>18:00 - 22:30</td>
-                <td>18:00 - 22:30</td>
-                <td>18:00 - 22:30</td>
+                <td><button type="button">18:00 - 22:30</button></td>
+                <td><button type="button">18:00 - 22:30</button></td>
+                <td><button type="button">18:00 - 22:30</button></td>
+                <td><button type="button">18:00 - 22:30</button></td>
+                <td><button type="button">18:00 - 22:30</button></td>
+                <td><button type="button">18:00 - 22:30</button></td>
+                <td><button type="button">18:00 - 22:30</button></td>
             </tr>	
             <tr>
-                <td>19:00 - 22:30</td>
-                <td>19:00 - 22:30</td>
-                <td>19:00 - 22:30</td>
-                <td>19:00 - 22:30</td>
-                <td>19:00 - 22:30</td>
-                <td>19:00 - 22:30</td>
-                <td>19:00 - 22:30</td>
+                <td><button type="button">19:00 - 22:30</button></td>
+                <td><button type="button">19:00 - 22:30</button></td>
+                <td><button type="button">19:00 - 22:30</button></td>
+                <td><button type="button">19:00 - 22:30</button></td>
+                <td><button type="button">19:00 - 22:30</button></td>
+                <td><button type="button">19:00 - 22:30</button></td>
+                <td><button type="button">19:00 - 22:30</button></td>
             </tr>
                     
     <tbody>
