adding css to turns list ;)

--- a/turns/templates/turns/post_turns.html
+++ b/turns/templates/turns/post_turns.html
@@ -1,9 +1,9 @@
-<html>
-    <head><title>Empleo Joven</title></head>
+{% load staticfiles %}
+<html> 
+    <link rel="stylesheet" href="{% static 'css/button.css' %}">
+    <head><title>Empleo Joven</title></head>   
     <body>
-     
-    <h1>Listado de Turnos</h1>
-     
+    <h1>Lista de Turnos</h1>  
     <table>
         <table>
             <tr scope="row">
@@ -16,67 +16,67 @@
                 <th scope="col">Domingo</th>
             </tr>
             <tr>
-                <td><button type="button">08:30 - 13:00</button></td>
-                <td><button type="button">08:30 - 13:00</button></td>
-                <td><button type="button">08:30 - 13:00</button></td>
-                <td><button type="button">08:30 - 13:00</button></td>
-                <td><button type="button">08:30 - 13:00</button></td>
-                <td><button type="button">08:30 - 13:00</button></td>
-                <td><button type="button">08:30 - 13:00</button></td>
+                <td><button class="button">08:30 - 13:00</button></td>
+                <td><button class="button">08:30 - 13:00</button></td>
+                <td><button class="button">08:30 - 13:00</button></td>
+                <td><button class="button">08:30 - 13:00</button></td>
+                <td><button class="button">08:30 - 13:00</button></td>
+                <td><button class="button">08:30 - 13:00</button></td>
+                <td><button class="button">08:30 - 13:00</button></td>
             </tr>
             <tr>
-                <td><button type="button">10:00 - 13:00</button></td>
-                <td><button type="button">10:00 - 13:00</button></td>
-                <td><button type="button">10:00 - 13:00</button></td>
-                <td><button type="button">10:00 - 13:00</button></td>
-                <td><button type="button">10:00 - 13:00</button></td>
-                <td><button type="button">10:00 - 13:00</button></td>
-                <td><button type="button">10:00 - 13:00</button></td>
+                <td><button class="button">10:00 - 13:00</button></td>
+                <td><button class="button">10:00 - 13:00</button></td>
+                <td><button class="button">10:00 - 13:00</button></td>
+                <td><button class="button">10:00 - 13:00</button></td>
+                <td><button class="button">10:00 - 13:00</button></td>
+                <td><button class="button">10:00 - 13:00</button></td>
+                <td><button class="button">10:00 - 13:00</button></td>
             </tr>	
             <tr>
-                <td><button type="button">12:00 - 16:00</button></td>
-                <td><button type="button">12:00 - 16:00</button></td>
-                <td><button type="button">12:00 - 16:00</button></td>
-                <td><button type="button">12:00 - 16:00</button></td>
-                <td><button type="button">12:00 - 16:00</button></td>
-                <td><button type="button">12:00 - 16:00</button></td>
-                <td><button type="button">12:00 - 16:00</button></td>
+                <td><button class="button">12:00 - 16:00</button></td>
+                <td><button class="button">12:00 - 16:00</button></td>
+                <td><button class="button">12:00 - 16:00</button></td>
+                <td><button class="button">12:00 - 16:00</button></td>
+                <td><button class="button">12:00 - 16:00</button></td>
+                <td><button class="button">12:00 - 16:00</button></td>
+                <td><button class="button">12:00 - 16:00</button></td>
             </tr>	
             <tr>
-                <td><button type="button">13:00 - 16:00</button></td>
-                <td><button type="button">13:00 - 16:00</button></td>
-                <td><button type="button">13:00 - 16:00</button></td>
-                <td><button type="button">13:00 - 16:00</button></td>
-                <td><button type="button">13:00 - 16:00</button></td>
-                <td><button type="button">13:00 - 16:00</button></td>
-                <td><button type="button">13:00 - 16:00</button></td>
+                <td><button class="button">13:00 - 16:00</button></td>
+                <td><button class="button">13:00 - 16:00</button></td>
+                <td><button class="button">13:00 - 16:00</button></td>
+                <td><button class="button">13:00 - 16:00</button></td>
+                <td><button class="button">13:00 - 16:00</button></td>
+                <td><button class="button">13:00 - 16:00</button></td>
+                <td><button class="button">13:00 - 16:00</button></td>
             </tr>	
             <tr>
-                <td><button type="button">16:00 - 19:00</button></td>
-                <td><button type="button">16:00 - 19:00</button></td>
-                <td><button type="button">16:00 - 19:00</button></td>
-                <td><button type="button">16:00 - 19:00</button></td>
-                <td><button type="button">16:00 - 19:00</button></td>
-                <td><button type="button">16:00 - 19:00</button></td>
-                <td><button type="button">16:00 - 19:00</button></td>
+                <td><button class="button">16:00 - 19:00</button></td>
+                <td><button class="button">16:00 - 19:00</button></td>
+                <td><button class="button">16:00 - 19:00</button></td>
+                <td><button class="button">16:00 - 19:00</button></td>
+                <td><button class="button">16:00 - 19:00</button></td>
+                <td><button class="button">16:00 - 19:00</button></td>
+                <td><button class="button">16:00 - 19:00</button></td>
             </tr>	
             <tr>
-                <td><button type="button">18:00 - 22:30</button></td>
-                <td><button type="button">18:00 - 22:30</button></td>
-                <td><button type="button">18:00 - 22:30</button></td>
-                <td><button type="button">18:00 - 22:30</button></td>
-                <td><button type="button">18:00 - 22:30</button></td>
-                <td><button type="button">18:00 - 22:30</button></td>
-                <td><button type="button">18:00 - 22:30</button></td>
+                <td><button class="button">18:00 - 22:30</button></td>
+                <td><button class="button">18:00 - 22:30</button></td>
+                <td><button class="button">18:00 - 22:30</button></td>
+                <td><button class="button">18:00 - 22:30</button></td>
+                <td><button class="button">18:00 - 22:30</button></td>
+                <td><button class="button">18:00 - 22:30</button></td>
+                <td><button class="button">18:00 - 22:30</button></td>
             </tr>	
             <tr>
-                <td><button type="button">19:00 - 22:30</button></td>
-                <td><button type="button">19:00 - 22:30</button></td>
-                <td><button type="button">19:00 - 22:30</button></td>
-                <td><button type="button">19:00 - 22:30</button></td>
-                <td><button type="button">19:00 - 22:30</button></td>
-                <td><button type="button">19:00 - 22:30</button></td>
-                <td><button type="button">19:00 - 22:30</button></td>
+                <td><button class="button">19:00 - 22:30</button></td>
+                <td><button class="button">19:00 - 22:30</button></td>
+                <td><button class="button">19:00 - 22:30</button></td>
+                <td><button class="button">19:00 - 22:30</button></td>
+                <td><button class="button">19:00 - 22:30</button></td>
+                <td><button class="button">19:00 - 22:30</button></td>
+                <td><button class="button">19:00 - 22:30</button></td>
             </tr>
                     
     <tbody>
