--- a/turns/static/css/button.css
+++ b/turns/static/css/button.css
@@ -36,3 +36,85 @@
     text-shadow: none;
     box-shadow: 0 1px 1px rgba(0, 0, 0, .3) inset;
   }
+
+  .button.color{
+    color: #fff;
+    text-shadow: 0 1px 0 rgba(0,0,0,.2);
+    background-image: linear-gradient(top, rgba(255,255,255,.3), 
+               rgba(255,255,255,0)),
+                      url(data:image/png;base64,iVBORw0KGg[...]QmCC);
+  }
+  
+  /* */
+  
+  .button.green{
+    background-color: #57a957;
+    border-color: #57a957;
+  }
+  
+  .button.green:hover{
+    background-color: #62c462;
+  }
+  
+  .button.green:active{
+    background: #57a957;
+  }
+  
+  /* */
+  
+  .button.red{
+    background-color: #c43c35;
+    border-color: #c43c35;
+  }
+  
+  .button.red:hover{
+    background-color: #ee5f5b;
+  }
+  
+  .button.red:active{
+    background: #c43c35;
+  }
+  
+  /* */
+  
+  .button.blue{
+    background-color: #269CE9;
+    border-color: #269CE9;
+  }
+  
+  .button.blue:hover{
+    background-color: #70B9E8;
+  }
+  
+  .button.blue:active{
+    background: #269CE9;
+  }
+
+  .button[disabled], .button[disabled]:hover, .button[disabled]:active{
+    border-color: #eaeaea;
+    background: #fafafa;
+    cursor: default;
+    position: static;
+    color: #999;
+    /* Usually, !important should be avoided but here it's really needed :) */
+    box-shadow: none !important;
+    text-shadow: none !important;
+  }
+  
+  .green[disabled], .green[disabled]:hover, .green[disabled]:active{
+    border-color: #57A957;
+    background: #57A957;
+    color: #D2FFD2;
+  }
+  
+  .red[disabled], .red[disabled]:hover, .red[disabled]:active{
+    border-color: #C43C35;
+    background: #C43C35;
+    color: #FFD3D3;
+  }
+  
+  .blue[disabled], .blue[disabled]:hover, .blue[disabled]:active{
+    border-color: #269CE9;
+    background: #269CE9;
+    color: #93D5FF;
+  }
