--- a/turns/templates/turns/post_turns.html
+++ b/turns/templates/turns/post_turns.html
@@ -16,16 +16,16 @@
                 <th scope="col">Domingo</th>
             </tr>
             <tr>
-                <td><button class="button">08:30 - 13:00</button></td>
-                <td><button class="button">08:30 - 13:00</button></td>
-                <td><button class="button">08:30 - 13:00</button></td>
-                <td><button class="button">08:30 - 13:00</button></td>
-                <td><button class="button">08:30 - 13:00</button></td>
-                <td><button class="button">08:30 - 13:00</button></td>
-                <td><button class="button">08:30 - 13:00</button></td>
+                <td><button class="color red button">08:30 - 13:00</button></td>
+                <td><button class="color blue button">08:30 - 13:00</button></td>
+                <td><button class="color green button">08:30 - 13:00</button></td>
+                <td><button class="color red button">08:30 - 13:00</button></td>
+                <td><button class="color red button">08:30 - 13:00</button></td>
+                <td><button class="color red button">08:30 - 13:00</button></td>
+                <td><button class="color red button">08:30 - 13:00</button></td>
             </tr>
             <tr>
-                <td><button class="button">10:00 - 13:00</button></td>
+                <td><button class="button" disabled>10:00 - 13:00</button></td>
                 <td><button class="button">10:00 - 13:00</button></td>
                 <td><button class="button">10:00 - 13:00</button></td>
                 <td><button class="button">10:00 - 13:00</button></td>
