--- a/turns/templates/turns/post_turns.html
+++ b/turns/templates/turns/post_turns.html
@@ -1,7 +1,16 @@
 {% load staticfiles %}
 <html> 
     <link rel="stylesheet" href="{% static 'css/button.css' %}">
-    <head><title>Empleo Joven</title></head>   
+    <head>
+        <title>Empleo Joven</title>
+        <script>
+                var count = 1;
+                function setColor(btn, color) { //clk = clicks counter
+                    var property = document.getElementById(btn);
+                        property.style.backgroundColor = "#7FFF00"
+                }
+        </script>              
+    </head>   
     <body>
     <h1>Lista de Turnos</h1>  
     <table>
@@ -16,13 +25,13 @@
                 <th scope="col">Domingo</th>
             </tr>
             <tr>
-                <td><button class="color red button">08:30 - 13:00</button></td>
-                <td><button class="color blue button">08:30 - 13:00</button></td>
-                <td><button class="color green button">08:30 - 13:00</button></td>
-                <td><button class="color red button">08:30 - 13:00</button></td>
-                <td><button class="color red button">08:30 - 13:00</button></td>
-                <td><button class="color red button">08:30 - 13:00</button></td>
-                <td><button class="color red button">08:30 - 13:00</button></td>
+                <td><input type="button" id="button1" class="color blue button" value="08:30 - 13:00" onclick="setColor('button1', '#101010')";/></td>
+                <td><input type="button" id="button2" class="color blue button" value="08:30 - 13:00" onclick="setColor('button2', '#101010')";/></td>
+                <td><input type="button" id="button3" class="color blue button" value="08:30 - 13:00" onclick="setColor('button3', '#101010')";/></td>
+                <td><input type="button" id="button4" class="color blue button" value="08:30 - 13:00" onclick="setColor('button4', '#101010')";/></td>
+                <td><input type="button" id="button5" class="color blue button" value="08:30 - 13:00" onclick="setColor('button5', '#101010')";/></td>
+                <td><input type="button" id="button6" class="color blue button" value="08:30 - 13:00" onclick="setColor('button6', '#101010')";/></td>
+                <td><input type="button" id="button7" class="color blue button" value="08:30 - 13:00" onclick="setColor('button7', '#101010')";/></td>
             </tr>
             <tr>
                 <td><button class="button" disabled>10:00 - 13:00</button></td>
